--- a/config/west.yml
+++ b/config/west.yml
@@ -7,6 +7,11 @@ manifest:
       remote: urob
       revision: main
       import: app/west.yml
+    - name: zmk-helpers
+      remote: urob
+      revision: main
+    - name: zmk-auto-layer
+      remote: urob
+      revision: main
   self:
     path: config
-
